# src/config/swagger.yaml
@@ -112,3 +112,34 @@ paths:
       responses:
         "200":
           description: comment created
+  /replay:
+    post:
+      tags:
+        - Comments
+      requestBody:
+        description: create replay
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                replyingTo:
+                  type: string
+                feedbackId:
+                  type: number
+                userId:
+                  type: number
+                commentId:
+                  type: number
+            example:
+              content: While waiting for dark mode, there are browser extensions that will also do the job. Search for 'dark theme' followed by your browser. There might be a need to turn off the extension for sites with naturally black backgrounds though.
+              replyingTo: hummingbird1
+              feedbackId: 2
+              userId: 6
+              commentId: 4
+      responses:
+        "200":
+          description: replay created
